# openmp

./: .gitignore  CMakeLists.txt  main.c
datatypes/: matrix.c  matrix.h
differentCycleModes/: differentCycleModes.c  differentCycleModes.h
dotProduct/: dotProduct.c  dotProduct.h
integrals/: integrals.c  integrals.h
matrixMiniMax/: matrixMiniMax.c  matrixMiniMax.h  matrixMiniMaxForSpecialTypes.c  matrixMiniMaxForSpecialTypes.h
nestedParallelism/: nestedParallelism.c  nestedParallelism.h
python_scripts/: vector_min_value.html  vector_min_value.ipynb
python_scripts/differentCycleModes/: differentCycleModes.ipynb  output.csv
python_scripts/dotProduct/: dotProduct.ipynb  output.csv
python_scripts/integrals/: integrals.ipynb  output.csv
python_scripts/matrixMiniMax/: matrixMiniMax.ipynb  output.csv
python_scripts/matrixMiniMaxForSpecTypes/: matrixMiniMaxForSpecTypes.ipynb  output.csv
python_scripts/nestedParallelism/: nestedParallelism.ipynb  output.csv
python_scripts/reductions/: output.csv  reductions.ipynb
python_scripts/vectorMinValue/: output.csv  vectorMinValue.ipynb  vector_min_value.ipynb
reductions/: reductions.c  reductions.h
utils/: utils.c  utils.h
vectorMinValue/: VectorMinValueImpl.c  vectorMinValue.h  vectorMinValueImpl.c
